# gas-index-algorithm

./: Cargo.toml  README.md
.github/workflows/: audit.yml  ci.yml
generated_code/: sensirion_gas_index_algorithm.rs
src/: lib.rs
